# analytics_cli

./: Cargo.toml  history.txt
src/: main.rs
